# amqp-protocol

./: Cargo.toml
amqp-transport/: Cargo.toml
amqp-transport/src/: framing.rs  performative.rs  version.rs
amqp-transport/src/definitions/: mod.rs
amqp-transport/src/performative/: attach.rs  begin.rs  open.rs
amqp-types/: Cargo.toml
amqp-types-macro/: Cargo.toml
amqp-types-macro/src/: composite.rs  consts.rs  enum_restricted.rs  lib.rs
amqp-types-macro/tests/: test_derive.rs
amqp-types/src/: codec.rs  codes.rs  constructor.rs  data.rs  descriptor.rs  error.rs  format_code.rs  lib.rs  primitives.rs  provides.rs  serde.rs  types.rs  value.rs
amqp-types/src/codec/: de.rs  enc.rs
amqp-types/src/primitive/: array.rs  list.rs  map.rs  mod.rs  ts.rs  uuid.rs
amqp-types/src/serde/: de.rs
amqp-types/src/types/: multiple.rs  restrict.rs
amqp-types2/: Cargo.toml
amqp-types2/src/: codec.rs  constructor.rs  data.rs  descriptor.rs  error.rs  format_code.rs  io.rs  lib.rs  types.rs  value.rs
amqp-types2/src/codec/: de.rs
amqp-types2/src/primitive/: array.rs  binary.rs  list.rs  map.rs  mod.rs  symbol.rs
decimal/src/: lib.rs
design/: type.md
src/: lib.rs
src/server/: mod.rs
src/sm/: mod.rs
src/sm/connection/: mod.rs
src/transport/: connections.rs  framing.rs  links.rs  mod.rs  sessions.rs  version.rs
src/transport/definitions/: mod.rs
src/transport/perfomative/: open.rs
src/transport/performative/: attach.rs  begin.rs  open.rs
src/types/: codes.rs  describe.rs  encoding.rs  mod.rs  value.rs
src/types/encoding/: codes.rs  de.rs  enc.rs
src/types/encoding/de/: async_reader.rs  reader.rs  slice.rs
src/types/encoding/enc/: async_writer.rs  writer.rs
src/types/serde/: de.rs  ser.rs
src/types/serde/de/: reader.rs  value.rs
src/types/serde/ser/: value.rs
