[package]
name = "amqp-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "amqp-types", "amqp-types-macro",
]

[dependencies]
bytes = "1.5.0"
decimal = "2.1.0"
serde = {version = "1.0.193", features = ["derive"]}
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde"] }
