[package]
name = "amqp_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
decimal = { workspace = true }
tokio = { workspace = true, features = ["net"] }
amqp_types = { path = "../amqp-types" }
