[package]
name = "amqp_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspce = true }
decimal = { workspce = true }
serde = { workspce = true }
tokio = { workspce = true, features = ["net"] }
amqp_types_macro = { path = "../amqp-types-macro" }
